[feature] Доделана функциональность по счетам, добавлена история операций